[package]
name = "upgraded-waffle"
version = "0.1.0"
authors = ["Tim Medina <iamteem@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "character_input"
path = "src/character_input.rs"

[[bin]]
name = "rps"
path = "src/rps.rs"

[[bin]]
name = "pass_gen"
path = "src/pass_gen.rs"

[dependencies]
chrono = "0.4.6"
rand = "0.6.5"